--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+# Ethereum
+ethers = "0.6.2"
+
+# Solana
 solana-client = "1.9.2"
 solana-sdk = "1.9.2"
