--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ web3 = "0.17.0"
 # Solana
 solana-client = "1.9.2"
 solana-sdk = "1.9.2"
+
+[dev-dependencies]
+# A small and fast async runtime
+smol = "1.2.5"
